# libSDL3pp

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  sdl3pp.pc.in
SDL3pp/: SDL3pp.hpp
SDL3pp/Exception/: Exception.hpp  Exception.inl
SDL3pp/Window/: Window.cpp  Window.hpp  Window.inl
cmake/: CompilerWarnings.cmake  SDL3ppConfig.cmake.in
examples/: CMakeLists.txt  window.cpp
include/SDL3pp/: Config.hpp  Config.hpp.in  Exception.hpp  Point.hpp  Rect.hpp  SDL.hpp  SDL3pp.hpp  Window.hpp  movable_ptr.hpp  observer_ptr.hpp  ranges.hpp
include/SDL3pp/inline_src/: Exception.inl  Point.inl  Rect.inl  Window.inl
src/: Point.cpp  Rect.cpp  Window.cpp
